force-app/main/default/objects/eCard_Serial_Category__c/eCard_Serial_Category__c.object-meta.xml
<CustomObject>
    <label>eCard Serial Category</label>
    <nameField>
        <label>item_id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>eCard Serial Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>