force-app/main/default/objects/eCard_Serial_Category__c/fields/item_desc__c.field-meta.xml
<CustomField>
    <fullName>item_desc__c</fullName>
    <label>item_desc</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>