force-app/main/default/objects/eCard_Serial_Category__c/fields/uf_serial_category__c.field-meta.xml
<CustomField>
    <fullName>uf_serial_category__c</fullName>
    <label>Serial Tracking Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Serial_Tracking_Category</valueSetName>
    </valueSet>
</CustomField>