force-app/main/default/objects/eCard_Serial_Category__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Mode__c</columns>
    <columns>NAME</columns>
    <columns>item_desc__c</columns>
    <columns>uf_serial_category__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>IsActive__c</columns>
    <columns>Active_Date__c</columns>
    <columns>InActive_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>