force-app/main/default/objects/eCard_Serial_Category__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>item_desc__c</columns>
    <columns>Mode__c</columns>
    <columns>uf_serial_category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Mode__c</field>
        <operation>equals</operation>
        <value>Electric</value>
    </filters>
    <label>All</label>
</ListView>